--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
     <div class="container">
         <div class="todo">
-            <h1>MY TODO LIST</h1>
-            <p>What to do today ? </p>
+            <h1>Top 5 Technologies in IT Industry</h1>
+            <!-- <p>What do you think? </p> -->
             <form id="form">
-                <input type="text" placeholder="Enter your task here.." id="input" />
+                <input type="text" placeholder="Add Technologies.." id="input" />
             </form>
         </div>
 
