--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="container">
         <div class="todo">
-            <h1>Top 5 Technologies in IT Industry</h1>
+            <h1>Top 5 Languages in IT Industry</h1>
             <!-- <p>What do you think? </p> -->
             <form id="form">
                 <input type="text" placeholder="Add Technologies.." id="input" />
